<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:gravity="center"
        android:paddingTop="15dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/gallows"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:src="@drawable/android_hangman_gallows" />

        <ImageView
            android:id="@+id/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/head"
            android:paddingLeft="73dp"
            android:paddingTop="18dp"
            android:src="@drawable/android_hangman_head" />

        <ImageView
            android:id="@+id/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/body"
            android:paddingLeft="81dp"
            android:paddingTop="40dp"
            android:src="@drawable/body" />

        <ImageView
            android:id="@+id/arm1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arm"
            android:paddingLeft="59dp"
            android:paddingTop="50dp"
            android:src="@drawable/arm1" />

        <ImageView
            android:id="@+id/arm2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arm"
            android:paddingLeft="83dp"
            android:paddingTop="50dp"
            android:src="@drawable/arm2" />

        <ImageView
            android:id="@+id/leg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/leg"
            android:paddingLeft="68dp"
            android:paddingTop="75dp"
            android:src="@drawable/android_hangman_leg1" />

        <ImageView
            android:id="@+id/leg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/leg"
            android:paddingLeft="83dp"
            android:paddingTop="75dp"
            android:src="@drawable/android_hangman_leg2" />
    </RelativeLayout>
	<LinearLayout
	    android:id="@+id/word"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="5dp"
	    android:background="#FFFFFFFF"
	    android:gravity="center"
	    android:orientation="horizontal"
	    android:padding="10dp"
	    >
	</LinearLayout>
	<GridView 
	    android:id="@+id/letters"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:layout_marginBottom="5dp"
	    android:background="#FF000000"
	    android:horizontalSpacing="5dp"
	    android:numColumns="7"
	    android:padding="5dp"
	    android:stretchMode="columnWidth"
	    android:verticalSpacing="5dp"
	    />
</LinearLayout>